k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-flask
  template:
    metadata:
      labels:
        app: api-flask
    spec:
      containers:
      - name: api-flask
        image: 058264249757.dkr.ecr.ap-south-1.amazonaws.com/flask_application_repo:latest
        ports:
        - containerPort: 5000
