k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-flask-service
  labels:
    app: api-flask
spec:
  type: ClusterIP
  selector:
    app: api-flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
